// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_updateReference 1`] = `
{
  "todos": [
    {
      "body": "Hello World",
      "id": "1",
      "workspaceId": "foobar123",
    },
    {
      "body": "here we go",
      "id": "3",
      "path": "/bar/foo:112233",
      "workspaceId": "foobar123",
    },
    {
      "body": "some code",
      "id": "2",
      "workspaceId": "foobar123",
    },
    {
      "body": "nothing",
      "id": "4",
      "path": "/bar/foo:31",
      "workspaceId": "foobar1234",
    },
  ],
}
`;

exports[`generate proper default state and configuration 1`] = `
{
  "defaultConfig": true,
}
`;

exports[`generate proper default state and configuration 2`] = `
{
  "defaultState": true,
  "someRandomConfig": "foobar",
}
`;

exports[`getActiveWorkspace 1`] = `
{
  "id": "6a46e7d7-31ab-4c19-80ec-333506d67dd0",
  "name": "foobarWorkspace",
  "path": "/foo/bar",
  "type": "workspace",
}
`;

exports[`getTextSelection 1`] = `
{
  "lang": "42",
  "name": "bar",
  "path": "/foo/bar:0",
  "text": "foobar",
}
`;

exports[`should apply old configuration if available 1`] = `
{
  "defaultConfig": "old config",
}
`;

exports[`should apply old configuration if available 2`] = `
{
  "defaultConfig": "old config",
  "defaultState": "old state",
}
`;

exports[`should get proper extension props 1`] = `
{
  "extname": "stateful.marquee",
  "os": "some platform",
  "platformversion": "some release",
  "uikind": "desktop",
  "vscodemachineid": "machineId",
  "vscodesessionid": "sessionId",
  "vscodeversion": "1.2.3",
}
`;
